# Transcript-Whisper-Application

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  error_log.md  main.py
src/modules/audio_process/: __init__.py  audio_chunking.py  audio_convert.py
src/modules/database/: __init__.py  queries.py  time_utils.py  transcript_handling.py
