[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-demo"
version = "1.0.0"
dependencies = [
    "ViStreamASR==0.1.3",
    "librosa==0.11.0",
    "soundfile==0.13.1",
    "openai-whisper==20250625",
    "pyaudio==0.2.14",
    "pydub==0.25.1",
]